# stockteacher

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_PLAN.md  CLAUDE.md  DATA_COLLECTION_PLAN.md  PLAN.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  presentation.md  pyproject.toml  test_websocket.py  test_ws.py
analysis/: __init__.py  settings.py
analysis/client/: openai_client.py
analysis/models/: domain.py
analysis/prompts/: __init__.py  (+1 more)
api/: chat_service.py  database.py  db_models.py  main.py  models.py  notification_constants.py  redis_cache.py  repositories.py  routes.py  vector_search.py  websocket_manager.py
docs/: ANALYSIS_PLAN.md  ARCHITECTURE.md  DATA_COLLECTION_PLAN.md  DECISIONS.md  NEXT_STEPS.md  OPERATIONS.md  PLAN.md  README.md  ROADMAP.md  SERVER_SCRIPTS_PLAN.md  SPEC.md  TESTING.md  WEB_E2E_TESTS_PLAN.md  al-1-notification-plan.md  ch-1-streaming-plan.md  ds-1-search-plan.md  ds-2-recommendation-plan.md  ds-3-rag-chroma-plan.md  feature-plan.md  issues-ch-1.md  issues-ch-2.md  issues-ch-3.md  issues-qo-1.md  issues-qo-2.md  phase-b-websocket-chat-plan.md  qo-1-rollback-plan.md  qo-2-guard-plan.md  runbook.md  web_application_plan.md
ingestion/: __init__.py  celery_app.py  settings.py
llm/: __init__.py  embeddings.py
publish/: __init__.py  materializer.py  notifier.py
scripts/: init_chroma.py  run_api.sh  run_servers.sh  stop_api.sh  stop_servers.sh  test_news_api.py
template/: SPEC_template.md
tests/: conftest.py
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+84 files in other folders)
