[project]
name = "my-stock-teacher"
version = "0.1.0"
description = "Data ingestion MVP for Slack stock report bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5,<6.0",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.11,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4,<9.0",
]

[dependency-groups]
dev = [
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
]